--- a/trunk/ jcms-iqbon/JCms/.classpath
+++ b/trunk/ jcms-iqbon/JCms/.classpath
@@ -21,5 +21,16 @@
 	<classpathentry kind="lib" path="lib/org.springframework.web.servlet-3.0.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-2_3-fcs-classfiles.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/standard.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-spring-annotations-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.context.support-3.0.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.aop-3.0.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-core-2.4.5.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/guava-r09.jar"/>
+	<classpathentry kind="lib" path="lib/asm-3.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
