--- a/ jcms-iqbon/JCms/build.xml
+++ b/ jcms-iqbon/JCms/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="GBK"?>
-<project name="cms" basedir=".">
+<project name="cms" basedir="." default="clean">
 	<property name="src" location="src"/>
 	<property name="lib" location="lib"/>
 	<property name="page" location="page"/>
