添加定时任务功能

--- a/ jcms-iqbon/JCms/src/resource/jdbc.properties
+++ b/ jcms-iqbon/JCms/src/resource/jdbc.properties
@@ -2,5 +2,12 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://199.71.214.94:3306/jcms?useUnicode=true
 jdbc.username=jcms
 jdbc.password=bizdb
-jdbc.minPoolSize=5
-jdbc.initialPoolSize=7
+jdbc.minPoolSize=7
+jdbc.initialPoolSize=12
+############quartz db########################
+quartz.driverClassName=com.mysql.jdbc.Driver
+quartz.url=jdbc:mysql://199.71.214.94:3306/quartz?useUnicode=true
+quartz.username=quartz
+quartz.password=bizdb
+quartz.minPoolSize=7
+quartz.initialPoolSize=12
