--- a/trunk/ jcms-iqbon/JCms/src/resource/jcms.properties
+++ b/trunk/ jcms-iqbon/JCms/src/resource/jcms.properties
@@ -1,3 +1,3 @@
-jcms.host=http://localhost:8080
+jcms.host=http://localhost:8081
 jcms.outfile.coding=UTF-8
-jcms.outfile.path=D:\\
+jcms.outfile.path=D:\\programming\\nginx-1.3.15\\html
