--- a/ jcms-iqbon/JCms/src/resource/jdbc.properties
+++ b/ jcms-iqbon/JCms/src/resource/jdbc.properties
@@ -1,12 +1,12 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://199.71.214.94:3306/jcms?useUnicode=true
-jdbc.username=jcms
-jdbc.password=bizdb
+jdbc.url=jdbc:mysql://199.71.214.94:3306/xiaoshuo?useUnicode=true&amp;autoReconnect=true
+jdbc.username=xiaoshuo
+jdbc.password=xiaoshuo
 jdbc.minPoolSize=7
 jdbc.initialPoolSize=12
 ############quartz db########################
 quartz.driverClassName=com.mysql.jdbc.Driver
-quartz.url=jdbc:mysql://199.71.214.94:3306/quartz?useUnicode=true
+quartz.url=jdbc:mysql://199.71.214.94:3306/quartz?useUnicode=true&amp;autoReconnect=true
 quartz.username=quartz
 quartz.password=bizdb
 quartz.minPoolSize=5
