--- a/ jcms-iqbon/JCms/src/resource/velocity.properties
+++ b/ jcms-iqbon/JCms/src/resource/velocity.properties
@@ -2,6 +2,8 @@
 #  default LogSystem to use: default: AvalonLogSystem
 #----------------------------------------------------------------------------
 runtime.log.logsystem.class = org.apache.velocity.runtime.log.Log4JLogSystem
+directive.set.null.allowed = true
+
 #---------------------------------------------------------------------------
 # This is the location of the Velocity Runtime log.
 #----------------------------------------------------------------------------
