--- a/trunk/ jcms-iqbon/JCms/WEB-INF/web.xml
+++ b/trunk/ jcms-iqbon/JCms/WEB-INF/web.xml
@@ -4,13 +4,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	
+	<!-- 转码filter -->
 	<filter>
 		<filter-name>CharEncodingFilter</filter-name>
 		<filter-class>
 			org.springframework.web.filter.CharacterEncodingFilter
 		</filter-class>
-		<init-param>
+	<init-param>
       <param-name>encoding</param-name>
       <param-value>utf-8</param-value>
     </init-param>
@@ -22,6 +22,21 @@
 	<filter-mapping>
 		<filter-name>CharEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- session过滤filter -->
+	<filter>
+		<filter-name>SessionFilter</filter-name>
+		<filter-class>
+			com.iqbon.jcms.web.util.SessionFilter
+		</filter-class>
+		<init-param>
+  			<param-name>excludedPages</param-name>
+  			<param-value>/admin/user/login.do</param-value>
+  		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>SessionFilter</filter-name>
+		<url-pattern>/admin/*</url-pattern>
 	</filter-mapping>
 	
 	<servlet>
@@ -63,4 +78,8 @@
 	<listener>
 		 <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 	</web-app>
